<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UI.DetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="Github"
            app:navigationIcon="@drawable/ic_arrow_back_white_18dp"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <!--belakang backdrop-->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:id="@+id/linear"
                    app:cardCornerRadius="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <FrameLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:layout_marginStart="15dp"
                            android:layout_marginBottom="15dp"
                            android:layout_weight="1">
                            <com.google.android.material.card.MaterialCardView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:cardCornerRadius="15dp"
                                android:layout_gravity="center"
                                android:layout_marginEnd="7.5dp">

                                <com.elyeproj.loaderviewlibrary.LoaderImageView
                                    android:id="@+id/detail_avatar"
                                    android:layout_width="180dp"
                                    android:layout_height="180dp" />

                            </com.google.android.material.card.MaterialCardView>
                        </FrameLayout>


                        <FrameLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="15dp"
                            android:layout_weight="1"
                            android:layout_gravity="center">
                            <LinearLayout
                                android:id="@+id/linearLayout"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center_horizontal"
                                android:layout_gravity="center"
                                android:orientation="vertical"
                                android:layout_marginStart="7.5dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/repository"
                                    android:textColor="@color/black"
                                    android:textSize="17dp" />

                                <com.elyeproj.loaderviewlibrary.LoaderTextView
                                    android:id="@+id/repo"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textAlignment="center"
                                    android:textSize="17dp" />

                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="1dp"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginTop="10dp"
                                    android:layout_marginRight="10dp"
                                    android:layout_marginBottom="10dp"
                                    android:background="@color/black" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/follower"
                                    android:textColor="@color/black"
                                    android:textSize="17dp" />

                                <com.elyeproj.loaderviewlibrary.LoaderTextView
                                    android:id="@+id/follower"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textAlignment="center"
                                    android:textSize="17dp" />

                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="1dp"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginTop="10dp"
                                    android:layout_marginRight="10dp"
                                    android:layout_marginBottom="10dp"
                                    android:background="@color/black" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/following"
                                    android:textColor="@color/black"
                                    android:textSize="17dp" />

                                <com.elyeproj.loaderviewlibrary.LoaderTextView
                                    android:id="@+id/following"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textAlignment="center"
                                    android:textSize="17dp" />
                            </LinearLayout>
                        </FrameLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <com.elyeproj.loaderviewlibrary.LoaderTextView
                    android:id="@+id/nama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linear"
                    android:layout_marginTop="20dp"
                    android:textAlignment="center"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/nama"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/white"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    app:layout_constraintTop_toBottomOf="@+id/bio">
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/more_detail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:listitem="@layout/item_detail"
                        android:layout_marginTop="5dp"/>
                    <com.github.ybq.android.spinkit.SpinKitView
                        android:id="@+id/spin_kit"
                        style="@style/SpinKitView.Large.Circle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        app:SpinKit_Color="@color/white" />
                </FrameLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


        <!--Isi Backdrop-->
        <LinearLayout
            android:id="@+id/backdrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:behavior_peekHeight="100dp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/top_backdrop_corner"/>
                <androidx.cardview.widget.CardView
                    android:layout_width="60dp"
                    android:layout_height="4dp"
                    app:cardCornerRadius="2dp"
                    android:layout_gravity="center"
                    app:cardBackgroundColor="@color/grey"
                    tools:cardElevation = "0dp"/>
            </FrameLayout>

            <fragment
                android:id="@+id/fragment2"
                android:name="id.chainlizard.githubsearch.UI.Follow.ContainerFollowFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/myFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="20dp"
        android:contentDescription="@string/add_favorite_desc"
        app:srcCompat="@drawable/ic_favorite_border_white_18dp"/>

</FrameLayout>
